--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,44 @@
-Flask==2.3.2
+alembic==1.15.1
+bcrypt==4.3.0  
+bidict==0.23.1
+blinker==1.9.0
+cffi==1.17.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+Flask==2.3.2        
+Flask-Migrate==4.1.0   
+Flask-SocketIO==5.3.6  
 Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.2.2     
+future==1.0.0        
+greenlet==3.1.1      
+bidict==0.23.1
+blinker==1.9.0
+cffi==1.17.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+Flask==2.3.2
+Flask-Migrate==4.1.0
 Flask-SocketIO==5.3.6
-flask-wtf==1.2.2
-flask-migrate==4.1.0
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.2.2
+future==1.0.0
+greenlet==3.1.1
+cffi==1.17.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+Flask==2.3.2
+Flask-Migrate==4.1.0
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.2.2
+future==1.0.0
+greenlet==3.1.1
+Flask==2.3.2
+Flask-Migrate==4.1.0
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.2.2
