--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.2.2     
 future==1.0.0        
 greenlet==3.1.1      
+gunicorn>=20.1.0
 bidict==0.23.1
 blinker==1.9.0
 cffi==1.17.1
