--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.2
+eventlet>=0.33.3
 Flask==2.3.2        
 Flask-Migrate==4.1.0   
 Flask-SocketIO==5.3.6  
