fix exclude for *.code-workspace

--- a/.gitignore
+++ b/.gitignore
@@ -182,4 +182,4 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/flask,venv
 
 decrypt-password.py
-.code-workspace
+*.code-workspace
